Implement and Add DB connection and define Data Models

--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "dev": "ts-node-dev --respawn --transpile-only apps/server.ts"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "mongoose": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.2",
     "eslint": "^9.39.2",
     "prettier": "^3.7.4",
