--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "ts-node-dev --respawn --transpile-only apps/server.ts"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^25.0.2",
